--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "create-reallysimpledocs",
   "version": "0.1.0",
   "description": "Scaffold a new ReallySimpleDocs site.",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "type": "module",
   "bin": {
     "create-reallysimpledocs": "bin/create-reallysimpledocs.js"
